--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<div id="map">
 	</div>
 	<script src="https://maps.googleapis.com/maps/api/js?sensor=flase"></script>
+	<script src="map-options.js"></script>
 	<script src="script.js"></script>
+
 </body>
 </html>
