--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-	<div id="map">
-	</div>
-	<script src="https://maps.googleapis.com/maps/api/js?sensor=flase"></script>
-	<script src="js/map-options.js"></script>
-	<script src="js/script.js"></script>
-
-</body>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
+	<body>
+		<div id="map">
+		</div>
+		<script src="https://maps.googleapis.com/maps/api/js?sensor=flase"></script>
+		<script src="js/mapster.js"></script>
+		<script src="js/map-options.js"></script>
+		<script src="js/script.js"></script>
+	</body>
 </html>
